# arterra

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
arterra/: CMakeLists.txt
arterra/include/: Engine.hpp  PCH.hpp
arterra/include/block/: BlockData.hpp  BlockManager.hpp
arterra/include/ecs/component/: Base.hpp  GameObject.hpp  Transform.hpp
arterra/include/gamestate/: Base.hpp  Init.hpp  Test.hpp
arterra/include/model/: ChunkMesh.hpp  CullableModel.hpp  Model.hpp  OBJ.hpp  SubChunkMesh.hpp
arterra/include/renderer/: Camera.hpp  ChunkRenderer.hpp  GuiElement.hpp  GuiRenderer.hpp  Renderer.hpp  Shader.hpp  ShaderManager.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  ViewFrustum.hpp  Window.hpp
arterra/include/texture/: AtlasTexture.hpp  Texture.hpp  TextureAtlas.hpp
arterra/include/thread/: ThreadJob.hpp  ThreadManager.hpp
arterra/include/ui/: Collider.hpp  Element.hpp  GUIElement.hpp  Manager.hpp  Material.hpp  UIElement.hpp
arterra/include/util/: DataObject.hpp  Direction.hpp  Logger.hpp  Maths.hpp  OpenSimplex.hpp  Random.hpp  Resource.hpp  Time.hpp
arterra/include/window/: Bind.hpp  Input.hpp  Window.hpp
arterra/include/world/: Block.hpp  Chunk.hpp  ChunkPool.hpp  SubChunk.hpp  TerrainGenerator.hpp  World.hpp  WorldPosition.hpp
arterra/res/models/: Block.mobj  Block.yaml  Slab.mobj  Slab.yaml  cube.mobj  plane.mobj  torus.mobj
arterra/res/shaders/: basic.frag  basic.vert  basicColour.frag  basicColour.vert  gui_sprite_simple.frag  gui_sprite_simple.vert  gui_sprite_spliced.frag  gui_sprite_spliced.vert
arterra/src/: Engine.cpp  Main.cpp
arterra/src/block/: BlockData.cpp  BlockManager.cpp
arterra/src/ecs/component/: Base.cpp  GameObject.cpp  Transform.cpp
arterra/src/gamestate/: Base.cpp  Init.cpp  Test.cpp
arterra/src/model/: ChunkMesh.cpp  CullableModel.cpp  Model.cpp  OBJ.cpp  SubChunkMesh.cpp
arterra/src/renderer/: Camera.cpp  ChunkRenderer.cpp  GuiElement.cpp  GuiRenderer.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  ViewFrustum.cpp  Window.cpp
arterra/src/texture/: AtlasTexture.cpp  Texture.cpp  TextureAtlas.cpp
arterra/src/thread/: ThreadJob.cpp  ThreadManager.cpp
arterra/src/ui/: Collider.cpp  Element.cpp  GUIElement.cpp  Manager.cpp  Material.cpp  UIElement.cpp
arterra/src/util/: Logger.cpp  OpenSimplex.cpp  Random.cpp  Resource.cpp  Time.cpp
arterra/src/window/: Bind.cpp  Input.cpp  Window.cpp
arterra/src/world/: Block.cpp  Chunk.cpp  ChunkPool.cpp  SubChunk.cpp  TerrainGenerator.cpp  World.cpp  WorldPosition.cpp
docs/: World.md
docs/gameplay/: Biomes.md  Blocks.md  Player.md
docs/technical/: BlockData.md  ChunkMeshing.md  Renderer.md  TerrainGeneration.md  TextureAtlas.md  World.md
ext/: CMakeLists.txt
lib/: CMakeLists.txt
test/: CMakeLists.txt
test/TestGTest/: CMakeLists.txt
